css/styles.css
#game, #winner-pick-view, #black-card-draw, #round-start-view, #player1-hand, #player2-hand, #player3-hand, #player4-hand, .hide {
  display: none;
}

h1 {
  /*font-family: 'Titan One', cursive;*/
  color: red;
  font-size: 80px;
  font-family: 'Fjalla One', sans-serif;
}

.jumbotron {
  background-color: black;
}

.score {
  font-weight: bold;
  color: #d74133;
  font-size: 20px;
}

h2 {
  font-family: 'Fjalla One', sans-serif;
  font-size: 30px;
  color: red;
  margin-top: 20px;
}

#score {
  background-color: red;
  padding: 1em;
  margin: 2em;
}

#score ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  text-align: center;
}

#score ul li {
  display: inline;
  padding: .2em 1em;
  color: black;
  background-color: white;
  font-size: 18px;
  border-style: dashed;
  border-width: thin;
  border-color: black;
}

.btn-warning {
  margin-top: 2em;
  margin-bottom: 2em;
}

.black-card {
  background-color: #1e2532;
  color: #ffffff;
  width: 50%;
  height: 400px;
  margin: auto;
}

.card-text {
  font-size: 30px;
}

.black-card-title {
  border-bottom-width: 1px;
  border-bottom-style: solid;
  text-align: center;
}

.name-display {
  font-family: 'Fjalla One', sans-serif;
}

.card {
  border-radius: 10px;
  margin-top: 20px;
}

.whitecard {
  width: 335px;
}

.hooray {
  font-size: 50px;
  font-family: 'Fjalla One', sans-serif;

}

#SNL  {
  width: 100%;
=======
.body-text {
  font-size: 20px;
  font-weight: bold;
  text-align: center;
  margin-top: 20px;
}

.sorry {
  background-color: pink;
}

.iframe {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-top: 40px;
}

